added draft introduction, references, corr matrix

--- a/306 Group Project.ipynb
+++ b/306 Group Project.ipynb
@@ -27,6 +27,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8e9ecc2d-f091-474b-a3bc-230c74905063",
    "metadata": {},
@@ -35,7 +36,11 @@
     "\n",
     "**Research Question:** \"Research question goes here\"\n",
     "\n",
-    "\"Motivation goes here\""
+    "(TO EDIT AND EXPAND) Which set of factors play a significant role in accurately predicting sleep efficiency?\n",
+    "\n",
+    "\"Motivation goes here\"\n",
+    "\n",
+    "(TO EDIT AND EXPAND) In this project we aim to determine, using data collected by a team of researchers from the University of Oxfordshire, what factors play a significant role in accurately predicting sleep efficiency. We attempt to use either a linear model or a quadratic model, whichever is more suitable and gives us better results to approach this. The motivation behind this is that sleep is a crucial element many college students are forced to ignore and rather just rely on caffeine consumption to function. We want to determine if any relationship exists between items like Coffee, Cigarettes, Alcohol, or sleep patterns and sleep efficiency. It has been repeatedly proved that sleep deprivation leads to a reduction in alertness, attention, and other basic cognitive processes (Garcia et al.).  “Sleep deprivation is more detrimental to cognitive functions that depend more on mental effort and cognitive capacity,” such as reaction time (Kusztor et al.). Sleep is an important aspect for humans, and thus we want to explore how to maximize its efficiency and determine if any factors are more detrimental to it."
    ]
   },
   {
@@ -47,11 +52,44 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d0ab2366-2342-4e55-88ab-a260a3274b9a",
    "metadata": {},
    "source": [
-    "\"Brief Description goes here\""
+    "\"Brief Description goes here\"\n",
+    "\n",
+    "(TO EDIT AND EXPAND) The dataset used in this project is sourced from [Kaggle](https://www.kaggle.com/datasets/equilibriumm/sleep-efficiency). The sleep efficiency data was collected in a study conducted by a team of researchers from the University of Oxfordshire. Over the course of several months, the team collected data using self-reported surveys, actigraphy, and polysomnography from participants they recruited from the local community in the UK. The source did not provide any further information.\n",
+    "\n",
+    "The following include all the variables measured in the dataset:\n",
+    "- Age (years) \n",
+    "    - Age of the individual\n",
+    "- Gender (male or female)\n",
+    "    - Categorical: Subject is male or female\n",
+    "- Bedtime (timestamp: YYYY-MM-DD HH:MM: SS) \n",
+    "    - Time subject goes to bed\n",
+    "- Wakeup time (timestamp: YYYY-MM-DD HH:MM: SS)\n",
+    "    - Time subject wakes up\n",
+    "- Sleep duration (hours)\n",
+    "    - The total amount of time spent sleeping\n",
+    "- Sleep efficiency\n",
+    "    - proportion of time in bed spent asleep\n",
+    "- REM sleep percentage\n",
+    "    - percentage of sleep duration spent in REM sleep\n",
+    "- Deep sleep percentage\n",
+    "    - percentage of sleep duration spent in Deep sleep\n",
+    "- Light sleep percentage\n",
+    "    - percentage of sleep duration spent in Light sleep\n",
+    "- Awakenings\n",
+    "    - number of times the subject woke up during the night\n",
+    "- Caffeine Consumption (mg)\n",
+    "    - Amount of caffeine consumed in the 24 hours prior to bedtime\n",
+    "- Alcohol Consumption (oz)\n",
+    "    - Amount of alcohol consumed in the 24 hours prior to bedtime\n",
+    "- Smoker\n",
+    "    - Categorical: subject smokes or does not smoke\n",
+    "- Exercise frequency\n",
+    "    - number of times the subject exercises each week"
    ]
   },
   {
@@ -75,7 +113,10 @@
    "execution_count": 21,
    "id": "971c6643-97ae-4630-9f7b-8ca95800a593",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -88,7 +129,10 @@
    "execution_count": 22,
    "id": "c83747ea-4dc7-4943-9033-7fa396422f91",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [
     {
@@ -190,7 +234,10 @@
    "execution_count": 23,
    "id": "6567da18-f375-4440-914a-a474bd54e460",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [
     {
@@ -247,11 +294,21 @@
    "execution_count": 24,
    "id": "e24ec46f-db63-4711-a965-d8d042794e64",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
-    "## Code for the correlation matrix goes here"
+    "## Code for the correlation matrix goes here\n",
+    "\n",
+    "data_cor <- cor(data) \n",
+    "round(cor, 2)\n",
+    "\n",
+    "library(Hmisc)\n",
+    "data_cor <- rcorr(as.matrix(data))\n",
+    "data_cor"
    ]
   },
   {
@@ -275,7 +332,10 @@
    "execution_count": 25,
    "id": "0ab2a331-5d71-415e-b714-606716194a29",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -294,7 +354,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fbb8829a-59a0-4931-90e8-efec31d402bf",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -302,7 +366,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b223c7f2-d44b-40d2-8079-00703a37557b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -320,7 +388,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bd4bed8f-fff0-4e70-9755-05e723629cf6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -328,7 +400,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d91d48d5-d8ee-4f89-8fde-115b8bc81699",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -344,7 +420,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "586bb8c4-b55a-4cf3-914c-25764a139b5a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -352,7 +432,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6e2d3902-b6d8-485b-a594-ecd0b2a86fbc",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -360,7 +444,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dfa17609-c738-455a-a215-eb3120f5bb3f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -368,7 +456,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "56cc7ce2-03b4-40e4-9263-9b1c12a2f9de",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -376,7 +468,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ae3a13c8-a22a-41a9-a629-590e10b3f6ba",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -392,7 +488,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "db1fde9c-c4ea-44d2-863a-1e75b02cb4cb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -400,7 +500,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4c3bcf0c-e61b-4c0a-9594-d714fe91be16",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -408,7 +512,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "32dba7b8-c447-4411-a672-58012a06c77a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -416,7 +524,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "904ddde1-ac5e-409b-a2b9-e49d046efe8a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -424,7 +536,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bf799362-fd7d-4d56-8244-725e998081b0",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -432,7 +548,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2b832de6-0fd1-4c25-af10-6d4d88981711",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -440,7 +560,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "65d96ece-8658-407b-8f29-46a0dd730ec3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -448,7 +572,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "883ed900-a415-466f-a689-741f270025c1",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -464,7 +592,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d492a345-f553-45bd-aa3b-a5199f8d74d7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -472,7 +604,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "59981cdc-b2e2-47be-8dd7-dfcd79d7c952",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -496,7 +632,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a18e33be-af9f-4439-a3f0-5617209a10ca",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Code goes here"
@@ -522,7 +662,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5a6ebf26-469a-431e-abf9-b0b8cba07ba1",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Code goes here"
@@ -549,7 +693,10 @@
    "execution_count": 29,
    "id": "44ad26df-ee84-4c30-a6a5-316f19e21dea",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -609,13 +756,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b8cf15af-07fe-42e1-ad37-4c023e3ec540",
    "metadata": {
     "tags": []
    },
    "source": [
-    "\"Add references here\""
+    "García, A., Angel, J. D., Borrani, J., Ramirez, C., & Valdez, P. (2021). Sleep deprivation effects on basic cognitive processes: which components of attention, working memory, and executive functions are more susceptible to the lack of sleep?. *Sleep science (Sao Paulo, Brazil)*, 14(2), 107–118. <https://doi.org/10.5935/1984-0063.20200049> \n",
+    "                            \n",
+    "Anikó Kusztor, Liisa Raud, Bjørn E Juel, André S Nilsen, Johan F Storm, Rene J Huster, Sleep deprivation differentially affects subcomponents of cognitive control, *Sleep*, Volume 42, Issue 4, April 2019, zsz016, <https://doi.org/10.1093/sleep/zsz016>\n"
    ]
   }
  ],
