fixed correlation matrix code

--- a/306 Group Project.ipynb
+++ b/306 Group Project.ipynb
@@ -303,9 +303,11 @@
    "source": [
     "## Code for the correlation matrix goes here\n",
     "\n",
-    "data_cor <- cor(data) \n",
-    "round(cor, 2)\n",
+    "#find correlation between numeric data\n",
+    "data_cor_numeric <- cor(data[, sapply(data, is.numeric)])\n",
+    "round(data_cor_numeric, 2)\n",
     "\n",
+    "#find correlation matrix with significance levels\n",
     "library(Hmisc)\n",
     "data_cor <- rcorr(as.matrix(data))\n",
     "data_cor"
