--- a/306 Group Project.ipynb
+++ b/306 Group Project.ipynb
@@ -27,12 +27,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8e9ecc2d-f091-474b-a3bc-230c74905063",
    "metadata": {},
    "source": [
-    "\"Introduction Section goes here\"\n",
+    "Sleep is an essential aspect of human life, and its quality has a significant impact on our overall health and well-being. However, many people struggle with getting good quality sleep, which can lead to a variety of negative health outcomes. To address this issue, we have undertaken a project to predict sleep efficiency using various data sources and learning techniques.\n",
+    "\n",
+    "In this project, we aim to develop a model that can accurately predict the quality of sleep based on various factors, such as the duration of sleep, caffeine consumption, deep sleep percentage, and light sleep percentage. By predicting sleep efficiency, we can identify potential causes of poor sleep and provide recommendations to improve it.\n",
+    "\n",
+    "To achieve this goal, we will be collecting data from the Kaggle and analyze the data to identify patterns and trends that are associated with sleep efficiency. Finally, we will develop a model that can predict sleep efficiency based on these factors.\n",
+    "\n",
+    "The potential benefits of this project are important, as improving sleep efficiency can have a positive impact on many areas of our lives. We hope that our research will lead to a better understanding of sleep and its relationship with various lifestyle factors, and ultimately contribute to the development of more effective interventions to improve sleep quality.\n",
     "\n",
     "**Research Question:** \"Research question goes here\"\n",
     "\n",
@@ -52,7 +57,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d0ab2366-2342-4e55-88ab-a260a3274b9a",
    "metadata": {},
@@ -758,7 +762,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b8cf15af-07fe-42e1-ad37-4c023e3ec540",
    "metadata": {
